WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183671
ActiveDOMObjects should assert that they are destroyed in the thread they are created
https://bugs.webkit.org/show_bug.cgi?id=183671
Summary
ActiveDOMObjects should assert that they are destroyed in the thread they are...
youenn fablet
Reported
2018-03-15 11:35:01 PDT
This is a safety measure so as to catch bad practice early on.
Attachments
Patch
(3.56 KB, patch)
2018-03-15 11:36 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Refined assertion
(3.57 KB, patch)
2018-03-16 15:24 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-03-15 11:36:51 PDT
Created
attachment 335869
[details]
Patch
WebKit Commit Bot
Comment 2
2018-03-15 13:24:03 PDT
Comment on
attachment 335869
[details]
Patch Clearing flags on attachment: 335869 Committed
r229639
: <
https://trac.webkit.org/changeset/229639
>
WebKit Commit Bot
Comment 3
2018-03-15 13:24:04 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-03-15 13:25:19 PDT
<
rdar://problem/38513800
>
WebKit Commit Bot
Comment 5
2018-03-15 15:57:12 PDT
Re-opened since this is blocked by
bug 183683
youenn fablet
Comment 6
2018-03-16 15:24:54 PDT
Created
attachment 335976
[details]
Refined assertion
WebKit Commit Bot
Comment 7
2018-03-23 10:48:51 PDT
Comment on
attachment 335976
[details]
Refined assertion Clearing flags on attachment: 335976 Committed
r229903
: <
https://trac.webkit.org/changeset/229903
>
WebKit Commit Bot
Comment 8
2018-03-23 10:48:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug