ActiveDOMObject should assert that they are destroyed in the thread they are created https://bugs.webkit.org/show_bug.cgi?id=183671

Reviewed by Chris Dumez.

No change of behavior.
Moved MessagePort assertion to ActiveDOMObject.

* dom/ActiveDOMObject.cpp:
(WebCore::ActiveDOMObject::~ActiveDOMObject):
* dom/ActiveDOMObject.h:
* dom/MessagePort.cpp:
(WebCore::MessagePort::~MessagePort):
* dom/MessagePort.h:


Canonical link: https://commits.webkit.org/199314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229639 268f45cc-cd09-0410-ab3c-d52691b4dbfc