Source/WebCore/dom/MessagePort.h
@@ -32,7 +32,6 @@
 #include "MessagePortChannel.h"
 #include "MessagePortIdentifier.h"
 #include "MessageWithMessagePorts.h"
-#include <wtf/Threading.h>
 #include <wtf/WeakPtr.h>
 
 namespace JSC {
@@ -129,10 +128,6 @@ private:
     MessagePortIdentifier m_remoteIdentifier;
 
     mutable std::atomic<unsigned> m_refCount { 1 };
-
-#if !ASSERT_DISABLED
-    Ref<Thread> m_creationThread { Thread::current() };
-#endif
 };
 
 } // namespace WebCore
